add-safe-wallet-login&&fix-login-bugs
